# sf_benchmarks

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  funcs.toml  gen_source.py
include/: sf_benchmarks.hpp  sf_eval.hpp  sf_libraries.hpp  sf_utils.hpp
misc/: join_for_readme.sql  sf_benchmarks.sql
src/: bessel.f  bind_af.cpp  bind_all.cpp  bind_amdlibm.cpp  bind_baobzi.cpp  bind_boost.cpp  bind_eigen.cpp  bind_fort.cpp  bind_gsl.cpp  bind_misc.cpp  bind_sctl.cpp  bind_sleef.cpp  bind_stl.cpp  hank103.f  main.cpp  sf_benchmarks.cpp  utils.cpp
